[WIP] Fix->Cors Bugg - swagger->layout
